welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:1: error: not found: value *
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {*
                                                      ^